--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.5",
     "random-words": "^2.0.1",
     "react": "^18.3.1",
